imágenes de productos en productos.html

--- a/productos.html
+++ b/productos.html
@@ -50,7 +50,6 @@
   <!-- CONTENIDO -->
   <div class="container my-5">
     <div class="row">
-      <!-- FILTROS -->
       <aside class="col-md-3">
         <div class="filtros mb-4">
           <h5>Filtrar por categoría</h5>
@@ -78,7 +77,7 @@
           <!-- Producto 1 -->
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="img/paracetamol.jpg" class="card-img-top" alt="Paracetamol">
+              <img src="https://www.farmaciassanchezantoniolli.com.ar/10123-medium_default/tafirol-x30-comp.jpg" class="card-img-top" alt="Paracetamol">
               <div class="card-body text-center">
                 <h5 class="card-title">Paracetamol 500mg</h5>
                 <p class="text-success fw-bold">$800</p>
@@ -89,7 +88,7 @@
           <!-- Producto 2 -->
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="img/jabon.jpg" class="card-img-top" alt="Jabón">
+              <img src="img/Jabon_Neutro.jpg" class="card-img-top" alt="Jabón">
               <div class="card-body text-center">
                 <h5 class="card-title">Jabón Neutro</h5>
                 <p class="text-success fw-bold">$650</p>
@@ -100,7 +99,7 @@
           <!-- Producto 3 -->
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="img/protector-solar.jpg" class="card-img-top" alt="Protector">
+              <img src="https://www.farmacialeloir.com.ar/img/articulos/2023/12/dermaglos_protector_solar_fps30_emulsion_imagen1.jpg" class="card-img-top" alt="Protector">
               <div class="card-body text-center">
                 <h5 class="card-title">Protector Solar FPS 50</h5>
                 <p class="text-success fw-bold">$2200</p>
@@ -111,7 +110,7 @@
           <!-- Producto 4 -->
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="img/curitas.jpg" class="card-img-top" alt="Curitas">
+              <img src="https://farmacityar.vtexassets.com/arquivos/ids/212000/222877_apositos-adhesivos-curitas-transpiel-surtidos-x-40-un_imagen-1.jpg?v=637608313287430000" class="card-img-top" alt="Curitas">
               <div class="card-body text-center">
                 <h5 class="card-title">Curitas Adhesivas x 20</h5>
                 <p class="text-success fw-bold">$550</p>
@@ -122,7 +121,7 @@
           <!-- Producto 5 -->
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="img/shampoo.jpg" class="card-img-top" alt="Shampoo">
+              <img src="https://ardiaprod.vtexassets.com/arquivos/ids/306928/Shampoo-Bond-Intense-Repair-Dove-200-Ml-_2.jpg?v=638599323620400000" class="card-img-top" alt="Shampoo">
               <div class="card-body text-center">
                 <h5 class="card-title">Shampoo Anticaspa</h5>
                 <p class="text-success fw-bold">$1200</p>
@@ -133,9 +132,9 @@
           <!-- Producto 6 -->
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="img/vitamina-c.jpg" class="card-img-top" alt="Vitamina C">
+              <img src="https://m.media-amazon.com/images/I/61vsR0FzzhL.jpg" class="card-img-top" alt="Vitamina C">
               <div class="card-body text-center">
-                <h5 class="card-title">Vitamina C 1000mg</h5>
+                <h5 class="card-title">Vitamina C </h5>
                 <p class="text-success fw-bold">$980</p>
                 <a href="producto.html" class="btn btn-outline-primary btn-sm">Ver más</a>
               </div>
