--- a/productos.html
+++ b/productos.html
@@ -34,11 +34,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <!-- <li class="nav-item"><a class="nav-link" href="productos.html">Medicamentos</a></li>
-          <li class="nav-item"><a class="nav-link" href="productos.html">Cuidado Personal</a></li>
-          <li class="nav-item"><a class="nav-link" href="productos.html">Bebés</a></li> -->
-        </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="carrito.html">🛒 Carrito</a></li>
           <li class="nav-item"><a class="nav-link" href="login.html">Iniciar Sesión</a></li>
@@ -73,6 +69,11 @@
 
       <!-- PRODUCTOS -->
       <section class="col-md-9">
+        <!-- BUSCADOR -->
+        <div class="mb-4">
+          <input type="text" id="buscador" class="form-control" placeholder="Buscar producto por nombre..." onkeyup="filtrarProductos()">
+        </div>
+
         <div class="row g-4">
           <!-- Producto 1 -->
           <div class="col-md-4">
@@ -85,6 +86,7 @@
               </div>
             </div>
           </div>
+
           <!-- Producto 2 -->
           <div class="col-md-4">
             <div class="card h-100">
@@ -96,6 +98,7 @@
               </div>
             </div>
           </div>
+
           <!-- Producto 3 -->
           <div class="col-md-4">
             <div class="card h-100">
@@ -107,6 +110,7 @@
               </div>
             </div>
           </div>
+
           <!-- Producto 4 -->
           <div class="col-md-4">
             <div class="card h-100">
@@ -118,6 +122,7 @@
               </div>
             </div>
           </div>
+
           <!-- Producto 5 -->
           <div class="col-md-4">
             <div class="card h-100">
@@ -129,12 +134,13 @@
               </div>
             </div>
           </div>
+
           <!-- Producto 6 -->
           <div class="col-md-4">
             <div class="card h-100">
               <img src="https://m.media-amazon.com/images/I/61vsR0FzzhL.jpg" class="card-img-top" alt="Vitamina C">
               <div class="card-body text-center">
-                <h5 class="card-title">Vitamina C </h5>
+                <h5 class="card-title">Vitamina C</h5>
                 <p class="text-success fw-bold">$980</p>
                 <a href="producto.html" class="btn btn-outline-primary btn-sm">Ver más</a>
               </div>
@@ -146,5 +152,18 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- SCRIPT FILTRO -->
+  <script>
+    function filtrarProductos() {
+      const input = document.getElementById("buscador").value.toLowerCase();
+      const productos = document.querySelectorAll(".card");
+
+      productos.forEach(card => {
+        const titulo = card.querySelector(".card-title").textContent.toLowerCase();
+        card.parentElement.style.display = titulo.includes(input) ? "block" : "none";
+      });
+    }
+  </script>
 </body>
 </html>
