Agregar cambios al repositorio

--- a/producto.html
+++ b/producto.html
@@ -20,23 +20,15 @@
   <!-- CONTENIDO PRINCIPAL -->
   <main class="detalle-container">
     <div class="galeria">
-      <img class="imagen-principal" src="https://www.farmaciassanchezantoniolli.com.ar/10123-medium_default/tafirol-x30-comp.jpg" alt="Tafirol">
-      <div class="miniaturas">
-        <img src="https://www.anikashop.com.ar/product_images/v/997/open-uri20220304-146-t0pzuv__25093_zoom.png" alt="Miniatura 1">
-        <img src="https://www.anikashop.com.ar/product_images/v/997/open-uri20220304-146-t0pzuv__25093_zoom.png" alt="Miniatura 2">
-        <img src="https://www.anikashop.com.ar/product_images/v/997/open-uri20220304-146-t0pzuv__25093_zoom.png" alt="Miniatura 3">
-      </div>
+      <img class="imagen-principal" src="" alt="">
+      <div class="miniaturas"></div>
     </div>
 
     <div class="info-producto">
-      <h1>Paracetamol 500mg (Caja x30)</h1>
-      <p class="precio">$800</p>
-      <p class="descripcion">
-        Analgésico y antipirético para dolores leves a moderados, fiebre y malestar general.
-        Apto para mayores de 12 años. Uso oral.
-      </p>
+      <h1></h1>
+      <p class="precio"></p>
+      <p class="descripcion"></p>
       <p><strong>Stock disponible</strong></p>
-      <p><strong>Categoría:</strong> Medicamentos</p>
 
       <div class="fila-cantidad">
         <span class="etiqueta-cantidad"><strong>Cantidad:</strong></span>
@@ -76,5 +68,7 @@
       if (actual > 1) valorSpan.textContent = actual - 1;
     });
   </script>
+
+  <script type="module" src="./js/detalle.js"></script>
 </body>
 </html>
