--- a/productos.html
+++ b/productos.html
@@ -34,17 +34,16 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="productos.html">Medicamentos</a></li>
-          <li class="nav-item"><a class="nav-link" href="productos.html">Cuidado Personal</a></li>
-          <li class="nav-item"><a class="nav-link" href="productos.html">Bebés</a></li> 
-        </ul>-->
-        <ul class="navbar-nav">
-          <li class="nav-item"><input type="search" class="buscador" placeholder="¿Qué estás buscando?" id="buscador"></li>
+        <form class="d-flex mx-auto" role="search">
+          <input class="form-control me-2" type="search" name="q" placeholder="¿Qué estás buscando?" aria-label="Buscar">
+          <button class="btn btn-outline-success" type="submit">Buscar</button>
+        </form>
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="carrito.html">🛒 Carrito</a></li>
           <li class="nav-item"><a class="nav-link" href="login.html">Iniciar Sesión</a></li>
         </ul>
       </div>
+
     </div>
   </nav>
 
@@ -54,30 +53,35 @@
       <!-- FILTROS -->
       <aside class="col-md-3">
         <div class="filtros mb-4">
-          <h5>Medicamentos</h5>
           <div class="form-check">
-            <input class="form-check-input" type="radio" id="cat1" name="categoria">
-            <label class="form-check-label" for="cat1">Analgésico</label>
+            <input class="form-check-input" type="radio" id="cat0" name="categoria" value="Todos los productos">
+            <label class="form-check-label" for="cat0">Todos los productos</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" id="cat2" name="categoria">
-            <label class="form-check-label" for="cat2">Antiinflamatorio</label>
+            <input class="form-check-input" type="radio" id="cat1" name="categoria" value="Medicamentos">
+            <label class="form-check-label" for="cat1">Medicamentos</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" id="cat3" name="categoria">
-            <label class="form-check-label" for="cat3">Gastrointestinal</label>
+            <input class="form-check-input" type="radio" id="cat2" name="categoria" value="Suplementos">
+            <label class="form-check-label" for="cat2">Suplementos</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" id="cat4" name="categoria">
-            <label class="form-check-label" for="cat2">Antibiótico</label>
+            <input class="form-check-input" type="radio" id="cat3" name="categoria" value="Cuidado Personal">
+            <label class="form-check-label" for="cat3">Cuidado Personal</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" id="cat5" name="categoria">
-            <label class="form-check-label" for="cat3">Antialérgico</label>
+            <input class="form-check-input" type="radio" id="cat4" name="categoria" value="Respiratorio">
+            <label class="form-check-label" for="cat2">Respiratorio</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" id="cat5" name="categoria" value="Higiene">
+            <label class="form-check-label" for="cat3">Higiene</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" id="cat6" name="categoria" value="Pediatría">
+            <label class="form-check-label" for="cat3">Pediatría</label>
           </div>
           <hr>
-          <h5>Filtrar por precio</h5>
-          <input type="range" class="form-range" min="0" max="5000" step="100">
         </div>
       </aside>
 
