--- a/carrito.html
+++ b/carrito.html
@@ -9,11 +9,12 @@
 <body>
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-    <div class="container">
+    <div class="container flex-column align-items-center">
       <a class="navbar-brand fw-bold text-success" href="index.html">
         <img src="img/logo.png" alt="Logo" width="30" class="me-2">
         Farmacia San Martín
       </a>
+      <div id="botonCatalogoHeader" class="mt-2"></div>
     </div>
   </nav>
 
