--- a/index.html
+++ b/index.html
@@ -89,8 +89,11 @@
       </div>
 
       <!-- ENLACE A TODOS LOS PRODUCTOS -->
-      <div class="text-center mt-5">
-        <a class="btn btn-outline-success" href="productos.html"><strong>Todos los Productos</strong></a>
+
+      <div class="boton-volver text-center mt-4">
+        <a href="productos.html" class="btn-volver">
+          Ver el catálogo
+        </a>
       </div>
     </div>
   </section>
