--- a/producto.html
+++ b/producto.html
@@ -2,9 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Detalle del Producto | Farmacia San Martín</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Bootstrap y estilos -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style_producto.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
@@ -14,7 +16,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container">
       <a class="navbar-brand fw-bold text-success d-flex align-items-center" href="index.html">
-        <img src="img/logo.png" alt="Logo" width="30" class="me-2">
+        <img src="img/logo.png" alt="Logo" width="30" class="me-2" />
         Farmacia San Martín
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -22,7 +24,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <form class="d-flex mx-auto" role="search">
-          <input class="form-control me-2" type="search" name="q" placeholder="¿Qué estás buscando?" aria-label="Buscar">
+          <input class="form-control me-2" type="search" name="q" placeholder="¿Qué estás buscando?" aria-label="Buscar" />
           <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
         <ul class="navbar-nav ms-auto">
@@ -32,17 +34,27 @@
               <span id="contadorCarrito">0</span>
             </a>
           </li>
-          <li class="nav-item"><a class="nav-link" href="login.html">Iniciar Sesión</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Iniciar Sesión</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- CONTENIDO PRINCIPAL -->
-  <main class="container my-5">
+  <main class="my-0 px-3 px-md-5">
     <div class="detalle-container">
       <div class="galeria">
-        <img class="imagen-principal" src="" alt="">
+        <img class="imagen-principal" src="" alt="Imagen del producto" />
+
+        <!-- BOTÓN VER CATÁLOGO -->
+        <div class="boton-volver text-center mt-4">
+          <a href="productos.html" class="btn-volver">
+            Ver el catálogo
+          </a>
+        </div>
+
         <div class="miniaturas"></div>
       </div>
 
@@ -87,4 +99,3 @@
   </script>
 </body>
 </html>
-
