--- a/productos.html
+++ b/productos.html
@@ -6,6 +6,7 @@
   <title>Productos | Farmacia San Martín</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/style_productos.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     body {
       background-color: #61c286;
@@ -39,7 +40,12 @@
           <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="carrito.html">🛒 Carrito</a></li>
+          <li class="nav-item">
+            <a class="nav-link position-relative" href="carrito.html">
+              <i class="fas fa-shopping-cart" style="color: #00AEEF;"></i>
+              <span id="contadorCarrito" class="position-absolute top-0 start-100 translate-middle badge rounded-pill">0</span>
+            </a>
+          </li>
           <li class="nav-item"><a class="nav-link" href="login.html">Iniciar Sesión</a></li>
         </ul>
       </div>
@@ -99,6 +105,17 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/productos.js"></script>
+  <script>
+    function actualizarContadorCarrito() {
+      const cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const totalItems = cart.reduce((acc, item) => acc + (item.qty || 1), 0);
+      const contador = document.getElementById("contadorCarrito");
+      if (contador) contador.textContent = totalItems;
+    }
+
+    document.addEventListener("DOMContentLoaded", actualizarContadorCarrito);
+  </script>
+
 </body>
 </html>
 
