Agregar cambios a los estilos del carrito

--- a/carrito.html
+++ b/carrito.html
@@ -40,6 +40,7 @@
   <footer class="bg-light border-top py-4">
     <div class="container text-center text-muted">
       <p class="mb-1">&copy; 2025 Farmacia San Martín - Jujuy</p>
+      <p class="mb-1">Correo: farmaciasanmartin@ejemplo.com | Tel: 388 123 4567</p>
     </div>
   </footer>
 
