--- a/productos.html
+++ b/productos.html
@@ -35,9 +35,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <form class="d-flex mx-auto" role="search">
-          <input class="form-control me-2" type="search" name="q" placeholder="¿Qué estás buscando?" aria-label="Buscar">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
+        <form class="buscador-wrapper d-flex flex-wrap justify-content-center gap-2 my-2" role="search">
+          <input class="form-control buscador" type="search" name="q" placeholder="¿Qué estás buscando?" aria-label="Buscar">
+          <button class="btn btn-success" type="submit">Buscar</button>
         </form>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
@@ -102,6 +102,16 @@
         <button id="verMas" class="btn btn-success me-2">Ver más</button>
         <button id="verMenos" class="btn btn-secondary">Ver menos</button>
       </div>
+
+      <!-- FOOTER -->
+      <footer class=" py-4"></footer>
+        <div class="container text-center text-muted">
+          <div id="footer">
+            <p class="mb-1">&copy; 2025 Farmacia San Martín - Jujuy</p>
+            <p class="mb-1">Correo: farmaciasanmartin@ejemplo.com | Tel: 388 123 4567</p>
+          </div>
+        </div>
+      </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/productos.js"></script>
