--- a/Frontend-React/index.html
+++ b/Frontend-React/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>Farmacia San Martín</title>
-    <link rel="icon" type="image/png" href="/img/logo.png" />
+    <link rel="icon" href="/img/Logo.png" type="image/png">
 
     <link
       rel="stylesheet"
